@@ -2,6 +2,9 @@
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Added method quoteIdentifier() to ezcDbHandler.
+- Added support for SQLite in-memory databases through the DSN:
+  "sqlite://:memory" and the dbParams:
+  "array( 'handler' => 'sqlite', 'port' => 'memory' );".
 - Fixed handling queries like "SELECT 1+1" in Oracle.
 
 1.1.2 - Monday 28 August 2006
